BAPL-913: Fixed double borders on buttons, blobs and removed refresh wheel

--- a/optashift-employee-rostering-gwtui/src/main/resources/org/optaplanner/openshift/employeerostering/gwtui/public/roster.less
+++ b/optashift-employee-rostering-gwtui/src/main/resources/org/optaplanner/openshift/employeerostering/gwtui/public/roster.less
@@ -239,11 +239,11 @@
 }
 
 .published {
-    border: 2px solid black !important;
+    border: 1px solid black !important;
 }
 
 .draft {
-    border: 2px dashed black !important;
+    border: 1px dashed black !important;
 }
 
 .pinned:before {
